# graviton

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLANNING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md  demo.tape
benches/: direct_vs_barnes_hut.rs
docs/: horizons.md  physics.md  scenarios.md
scenarios/: asteroid-belt.toml  earth-moon.toml  figure-eight.toml  solar-system.toml
scripts/: record-demo.sh
src/: app.rs  bench.rs  cli.rs  error.rs  lib.rs  main.rs  simulation.rs
src/horizons/: cache.rs  client.rs  fetch.rs  ids.rs  mod.rs  parser.rs
src/input/: keymap.rs  mod.rs  mouse.rs
src/physics/: barnes_hut.rs  body.rs  constants.rs  diagnostics.rs  field.rs  gravity.rs  integrator.rs  mod.rs  rk4.rs  system.rs  units.rs
src/render/: camera.rs  canvas.rs  colors.rs  heatmap.rs  hud.rs  kitty.rs  mod.rs  trails.rs
src/scenario/: belt.rs  colors.rs  loader.rs  mod.rs  schema.rs  validate.rs
src/time/: clock.rs  mod.rs  scheduler.rs
tests/: barnes_hut_drift.rs  earth_moon_headless.rs  smoke.rs
tests/fixtures/: horizons_earth.json
