[package]
name = "graviton"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Terminal N-body gravitational simulator with NASA HORIZONS ephemeris data"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["n-body", "orbital-mechanics", "tui", "simulation", "astronomy"]
categories = ["simulation", "science", "command-line-utilities"]

[lib]
name = "graviton"
path = "src/lib.rs"

[[bin]]
name = "graviton"
path = "src/main.rs"

[[bench]]
name = "direct_vs_barnes_hut"
harness = false

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "fs"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
glam = { version = "0.29", features = ["serde"] }
ordered-float = "4.2"

[dev-dependencies]
insta = { version = "1.40", features = ["toml"] }
criterion = "0.5"
proptest = "1.5"

[profile.release]
lto = "thin"
codegen-units = 1
